# audec

./: Cargo.toml  LICENSE.MIT  README.md
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: Cargo.toml  args.yml  fifo.rs  main.rs  view.rs  vulkan.rs  window.rs
src/view/: scope.rs  spec.rs  vec.rs
