[package]
name = "audec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^2.33", features = ["yaml"]}
sdl2 = "^0.35"
sdl2-sys = "^0.35"
libc = "^0.2"
rustfft = "^6"
portaudio = "^0.7"
