[package]
name = "audec"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "audec"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^2.33", features = ["yaml"]}
sdl2 = "^0.35"
sdl2-sys = "^0.35"
libc = "^0.2"
rustfft = "^6"
portaudio = "^0.7"
hprof = "0.1"
shaders = { path = "../shaders" }